--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@next/font": "13.1.2",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "eslint-config-next": "^13.4.9",
+    "next": "^13.4.9",
     "react": "18.2.0",
+    "react-bmapgl": "^0.2.20",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
